--- a/src/App.css
+++ b/src/App.css
@@ -330,7 +330,7 @@ html {
 
 .navigation {
   height: 100%;
-  width: 40%;
+  width: 45%;
   /* border: 1px solid white; */
   display: flex;
   align-items: center;
@@ -379,7 +379,7 @@ html {
 .devinfo {
   display: flex;
   height: 50%;
-  width: 50%;
+  width: 60%;
   /* border: 2px solid white; */
   flex-direction: column;
   justify-content: space-around;
@@ -387,20 +387,19 @@ html {
 }
 
 .devimg {
-  border: 1px solid white;
   width: 40%;
-  height: 60%;
+  height: 70%;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* animation: jummping 4s infinite; */
 }
 
 .devimg img {
   border-radius: 100%;
   width: 70%;
-  /* height: 80%; */
+  height: 100%;
   filter: drop-shadow(0 0 1rem black);
+
   /* border: 2px solid white; */
 }
 
@@ -476,11 +475,12 @@ i {
   border: none;
   background-color: #0065ff;
   color: white;
-  border-radius: 1rem;
-  width: 20%;
-  height: 16%;
+  border-radius: 0.7rem;
+  width: 16%;
+  height: 14%;
   margin-top: 1.5rem;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
+  letter-spacing: 1px;
   position: relative;
   /* animation: glow 2.5s infinite; */
   /* box-shadow: 0px 0px 2rem #0b4eb4 ; */
@@ -789,7 +789,7 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-radius: 1rem;
+  border-radius: 0.7rem;
   height: 29vh;
   width: 30%;
   margin: 2rem 2rem;
@@ -822,7 +822,7 @@ h4 {
   font-size: 1.4rem;
   width: 27%;
   /* border: 1px solid; */
-  border-radius: 048rem;
+  border-radius: 0.7rem;
   background-color: #0065ff;
   display: flex;
   align-items: center;
