--- a/src/App.css
+++ b/src/App.css
@@ -371,16 +371,15 @@ html {
   width: 90vw;
   padding: 0rem 1rem;
   margin: auto;
-
   align-items: center;
-  /* border: 1px solid whitesmoke; */
+  
+  /* border: 10px solid white; */
 }
 
 .devinfo {
   display: flex;
   height: 50%;
   width: 60%;
-  /* border: 2px solid white; */
   flex-direction: column;
   justify-content: space-around;
   color: white;
@@ -985,11 +984,12 @@ h4 {
 
   .infocontainer {
     font-size: 1rem;
-    height: 90vh;
+    height: 75vh;
     width: 100vw;
     flex-wrap: wrap;
     flex-direction: column-reverse;
     justify-content: center;
+    /* border: 2px solid white; */
   }
 
   .social {
@@ -1031,6 +1031,7 @@ h4 {
   .devimg {
     /* border: 1px solid white; */
     width: 100%;
+    height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
